--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.mail.password=itprvndjubmctzak
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.rabbitmq.addresses=amqps://hfiqskok:nx1VndVC_FU0Gjt20EKA87vgZuVdjRvp@woodpecker.rmq.cloudamqp.com/hfiqskok
+spring.rabbitmq.queue=ms.email
