atualizando configuração de fila e desabilitando o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/ms-email
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5433/ms-email
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 #spring.jpa.hibernate.ddl-auto=update
 
 
@@ -13,5 +13,5 @@ spring.mail.password=itprvndjubmctzak
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.rabbitmq.addresses=amqps://hfiqskok:nx1VndVC_FU0Gjt20EKA87vgZuVdjRvp@woodpecker.rmq.cloudamqp.com/hfiqskok
+spring.rabbitmq.addresses=amqps://xlpdektl:kUVuKbF_DIB1hatWpAio1U2UMMLeENs0@woodpecker.rmq.cloudamqp.com/xlpdektl
 spring.rabbitmq.queue=ms.email
